--- a/orders/static/orders/style.css
+++ b/orders/static/orders/style.css
@@ -26,7 +26,7 @@ a:hover {
 	top: 7.5%;
 	left: 7.5%;
 	height: 85vh;
-	width: 85%;;
+	width: 85%;
 	background-color: rgba(0, 0, 0, 0.3);
 	/*opacity: 0.3;	*/
 }
@@ -100,8 +100,16 @@ a:hover {
 }*/
 
 #cart-header {
-	font-size: 2em;
+	font-size: 2rem;
 	font-weight: bold;
+}
+
+#cart-body, #cart-footer {
+	margin-top: 10px;
+	margin-bottom: 10px;
+    font-size: 1.2rem;
+    font-style: italic;
+    line-height: 1.1;
 }
 
 
@@ -118,11 +126,10 @@ td {
 	text-align: center;
 }
 
-td.left-col {
+td.left-col-td {
 	text-align: left;
 
 }
-
 
 
 .btn {
@@ -134,6 +141,13 @@ td.left-col {
 
 .btn:hover {
 	color: #f28f3b;
+}
+
+button {
+	cursor: pointer;
+}
+button:disabled {
+	cursor: not-allowed;
 }
 
 
