--- a/orders/templates/login.html
+++ b/orders/templates/login.html
@@ -1,14 +1,19 @@
+{% extends "base.html" %}
+
 {% block body %}
-<h1>Login</h1>
-{% if message %}
-    <div>
-        {{ message }}
-    </div>
-{% endif %}
-<form action="{% url 'login' %}" method="post">
-    {% csrf_token %}
-    <input name="username" type="text"/>
-    <input name="password" type="password"/>
-    <input type="submit" value="Login"/>
-</form>
+
+<div id="main-container" class="container">
+	<h1>Login</h1>
+	{% if message %}
+	    <div>
+	        {{ message }}
+	    </div>
+	{% endif %}
+	<form action="{% url 'login' %}" method="post">
+	    {% csrf_token %}
+	    <input name="username" type="text"/>
+	    <input name="password" type="password"/>
+	    <input type="submit" value="Login"/>
+	</form>
+</div>
 {% endblock %}
