--- a/orders/templates/signup.html
+++ b/orders/templates/signup.html
@@ -3,10 +3,13 @@
 {% block title %}Sign Up{% endblock title %}
 
 {% block body %}
-<h2>Sign Up</h2>
-	<form method="post">
-		  {% csrf_token %}
-		  {{ form.as_p }}
-		  <button type="submit">Sign Up</button>
-	</form>
+<div id="main-container" class="container">
+	<h2>Sign Up</h2>
+		<form method="post">
+			  {% csrf_token %}
+			  {{ form.as_p }}
+			  <button type="submit">Sign Up</button>
+		</form>
+</div>
 {% endblock body %}
+
